# rag-evaluator

./: .env.example  .gitignore  README.md  pyproject.toml
dashboard/: .gitignore  README.MD  __init__.py  __main__.py  run.py  setup.py
dashboard/backend/: app.py  requirements.txt
dashboard/frontend/: .eslintrc.json  index.html  package-lock.json  package.json
dashboard/frontend/src/: App.tsx  main.tsx  style.css  vite-env.d.ts
dashboard/frontend/src/components/: ComparisonControls.tsx  ErrorAlert.tsx  GoalRadarChart.tsx  GoalsPerformance.tsx  IndividualTestResults.tsx  LoadingSpinner.tsx  MetricCorrelationHeatmap.tsx  (+6 more)
evaluation_results/: Experiment 1 - phi-4-mini.json  Experiment 2 - llama-3.2-3B.json  Experiment 3 - llama-2-7B.json  llama3-2-3b-all-minilm-10-all_20250726_024909.json  phi-4-mini_bge-small_10_all_20250725_233841.json  phi-4-mini_bge-small_15_simple_20250725_154117.json
examples/: evaluation_config.yaml  question_generation.py  rag_system_evaluation.py
questions/: llama-2-7b-rag_1adf5627687b.json  llama-2-7b-rag_b62d9fb9af40.json  llama-2-7b-rag_be31d829516c.json
src/rag_evaluator/: config.py  constants.py
src/rag_evaluator/adapters/: __init__.py  langchain.py
src/rag_evaluator/clients/: __init__.py  gemini_client.py  voyage_client.py
src/rag_evaluator/framework/: __init__.py  evaluation_data.py  gqm.py  llm_metric_mapper.py  metric_executor.py  pipeline.py
src/rag_evaluator/generators/: __init__.py  question_cache.py  question_generator.py
src/rag_evaluator/metrics/: generation_metrics.py  retrieval_metrics.py  system_metrics.py
(+8 files in other folders)
